--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
+[submodule "assignment-autotest"]
+	path = assignment-autotest
+	url = https://github.com/cu-ecen-aeld/assignment-autotest.git
+
+
 [submodule "poky"]
 	path = poky
 	url = git://git.yoctoproject.org/poky
